--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ py==1.11.0
 pyparsing==3.0.9
 PySnooper==1.1.1
 pytest==7.1.3
+python-dotenv==0.21.0
 requests==2.28.1
 tomli==2.0.1
 urllib3==1.26.12
