--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==2.1.1
 colorlog==6.7.0
 frozenlist==1.3.1
 hikari==2.0.0.dev110
+hikari-lightbulb==2.2.4
 idna==3.4
 iniconfig==1.1.1
 multidict==6.0.2
